...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.team13.trojancheckin_out.Layouts.Register">

    <Button
        android:id="@+id/signOut"
        android:layout_width="268dp"
        android:layout_height="55dp"
        android:layout_marginBottom="68dp"
        android:fontFamily="@font/montserrat_semibold"
        android:letterSpacing="0.02"
        android:stateListAnimator="@null"
        android:text="REGISTER"
        android:textSize="16sp"
        app:backgroundTint="#990000"
        app:cornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
...
        android:background="#990000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="158dp"
        android:layout_height="147dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoView"
...
        android:fontFamily="@font/montserrat_semibold"
        android:stateListAnimator="@null"
        android:text="CONFIRM PASSWORD"
        android:textColor="#990000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="313dp"
        android:layout_height="50dp"
        android:backgroundTint="#990000"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:inputType="textEmailAddress"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="313dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#990000"
        android:ems="10"
        android:inputType="textPassword"
...
