...
        android:text="&lt; back"
        android:textAllCaps="false"
        android:textColor="#272727"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register3" />

    <Button
        android:id="@+id/register3"
        android:layout_width="268dp"
        android:layout_height="55dp"
        android:layout_marginBottom="68dp"
...
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="FIRST NAME"
        android:textColor="#990000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="113dp"
        android:layout_height="25dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="LAST NAME"
        android:textColor="#990000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="113dp"
        android:layout_height="25dp"
        android:layout_marginStart="60dp"
...
    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="Complete Your Profile"
        android:textColor="#990000"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />
...
