...
        style="@android:style/Widget.Spinner.DropDown"
        android:layout_width="394dp"
        android:layout_height="34dp"
        android:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <Spinner
        android:id="@+id/spinner2"
        style="@android:style/Widget.Spinner.DropDown"
        android:layout_width="394dp"
        android:layout_height="34dp"
...
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="@+id/spinner2"
        app:layout_constraintTop_toTopOf="@+id/spinner2"
        app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24" />

    <Button
        android:id="@+id/button7"
        android:layout_width="134dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#990000"
        android:fontFamily="@font/montserrat_semibold"
        android:letterSpacing="0.02"
...
        android:fontFamily="@font/montserrat"
        android:text="Student ID"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="Major"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="Search Students"
        app:layout_constraintEnd_toStartOf="@+id/backer"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

</androidx.constraintlayout.widget.ConstraintLayout>
