...
            android:textSize="13sp"
            app:cornerRadius="15dp"
            app:strokeColor="@color/red"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#00990000"
            android:fontFamily="@font/montserrat_semibold"
            android:letterSpacing="0.02"
            android:stateListAnimator="@null"
            android:text="SEARCH STUDENTS"
            android:textColor="@color/red"
            android:textSize="13sp"
            app:cornerRadius="15dp"
            app:strokeColor="@color/red"
            app:strokeWidth="1dp" />
    </com.google.android.material.bottomnavigation.BottomNavigationView>
...
